# daijoubu-tidy

./: .env.example  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  6640663165bf_add_declutter_tasks_table.py
scripts/: start.sh  stop.sh
src/bot/: __init__.py  main.py
src/bot/cogs/: collect.py  declutter.py  search.py  summary.py
src/core/: config.py  database.py
src/models/: __init__.py  base.py  category.py  declutter_task.py  item.py  tag.py
src/schemas/: __init__.py  item.py
src/services/: __init__.py  ai.py  declutter.py  items.py  search.py
tests/: conftest.py
